--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -142,6 +142,14 @@ body {
   z-index: 1 !important;
 }
 
+.rounded-4 {
+  border-radius: 1rem !important;
+}
+
+.fs-7 {
+  font-size: 0.92rem !important;
+}
+
 ::-webkit-scrollbar {
   width: 0;
 }
