--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -151,5 +151,11 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 0;
+  width: 0 !important;
+}
+
+@media (min-width: 992px) {
+  .w-lg-25 {
+    width: 25% !important;
+  }
 }
