--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -134,10 +134,6 @@ body {
   border-bottom-right-radius: 50px;
 }
 
-.w-83 {
-  width: 83% !important;
-}
-
 .z-index-1 {
   z-index: 1 !important;
 }
@@ -157,5 +153,9 @@ body {
 @media (min-width: 992px) {
   .w-lg-25 {
     width: 25% !important;
+  }
+
+  .w-lg-83 {
+    width: 83% !important;
   }
 }
